fixed large file issue

--- a/content/Computer Science/Algorithms & Data Structures Analysis/Notes/1.3 School Method Arithmetic.md
+++ b/content/Computer Science/Algorithms & Data Structures Analysis/Notes/1.3 School Method Arithmetic.md
@@ -1,17 +1,5 @@
 
-> [!idea] Number Representation
-> $$
-\text{Any digit \(d\) of any base \(B\), can be represented in decimal by:} \quad d = \sum_{i=0}^{n-1} d_i B^i
-> $$
 
-This formula is essentially saying, for every digit in a number, multiply each of them by the base to the power of the position of the digit and sum each result. 
-
-| Base (B)         | Expression                                                  | Decimal Value |     |
-| ---------------- | ----------------------------------------------------------- | ------------- | --- |
-| 2 (binary)       | $1 \cdot 2^3 + 0 \cdot 2^2 + 1 \cdot 2^1 + 1 \cdot 2^0$     | 11            |     |
-| 8 (octal)        | $5 \cdot 8^3 + 3 \cdot 8^2 + 4 \cdot 8^1 + 7 \cdot 8^0$     | 2791          |     |
-| 10 (decimal)     | $1 \cdot 10^3 + 7 \cdot 10^2 + 0 \cdot 10^1 + 9 \cdot 10^0$ | 1709          |     |
-| 16 (hexadecimal) | $A \cdot 16^3 + D \cdot 16^2 + 5 \cdot 16^1 + A \cdot 16^0$ | 44378         |     |
 
 > [!idea]+ Rule
 > 
@@ -52,7 +40,7 @@ end for
 s[n] = carry
 ```
 
->[!idea] Theorem - School Method Addition
+>[!idea] Theorem - School Method Multiplication
 The school method multiplication of two n-digit integers requires $3n^2 + 2n = n^2$ primitive operations. It results in at most, a $2n$ digit integer.
 
 
@@ -93,3 +81,4 @@ We already have a pretty fast algorithm to compute addition, but can we make a f
 
 
 
+![[Number Representation]]
