--- a/content/Computer Science/Algorithms & Data Structures Analysis/Notes/2.1 Recursive Multiplication.md
+++ b/content/Computer Science/Algorithms & Data Structures Analysis/Notes/2.1 Recursive Multiplication.md
@@ -1,15 +1,67 @@
 
 > [!idea] The Idea
-> Reduce complexity of school method multiplication through recursion! Let $a$ and $b$ be the numbers to be multiplied:
+> Reduce complexity of school method multiplication through recursion! Let $a$ and $b$ be the numbers to be multiplied.
+> 
+> **Step 1: Split the integers**
+> 
+> $$
+\begin{align*}
+a &= \overbrace{12}^{a_1} \quad \overbrace{34}^{a_0} \\
+b &= \underbrace{56}_{b_1} \quad \underbrace{78}_{b_0} \\
+> n = digits \\
+> k = \frac{n}{2}
+\end{align*}
+> $$
+> 
+> **Step 2: Calculate Partial Products**
+> $$
+\begin{aligned}
+p_0 &= a_0 \times b_0 = 34 \times 78 = 2652 \\
+p_1 &= a_1 \times b_0 = 12 \times 78 = 936 \\
+p_2 &= a_0 \times b_1 = 34 \times 56 = 1904 \\
+p_3 &= a_1 \times b_1 = 12 \times 56 = 672
+\end{aligned}
+> $$
+> **Step 3: Add the Aligned products**
+> $$
+> \begin{align*}
+> a \times b &= p_3 \times B^{2k} + B^k \times(p_1+p_2) + p_0 \\
+> &= 6720000 + 284000 + 2652 \\
+> &= 7006652 
+> \end{align*} 
+> $$
+> 
+> **Notice, that we can split the integers even further and recursively find those multiplications**
+> 
+> ![[Pasted image 20240304232810.png]]
 
-$$
-a \times b = (a_1 \cdot B^k + a_0) \times (b_1 \cdot B^k + b_0) \\
-= a_1b_1 \cdot B^{2k} + (a_1b_0 + a_0b_1) \cdot B^k + a_0b_0
-$$
+
+> [!code] Pseudocode
+> ```c
+> function multiply(a, b, n) {
+> 	if n == 1:
+> 		return a * b
+> 	else:
+> 		// split the numbers
+> 		a1, a0 = split(a)
+> 		b1, b0 = split(b)
+> 		
+> 		// Solve four subproblems
+> 		p0 = multiply(a0, b0, n/2)
+> 		p1 = multiply(a1, b0, n/2)
+> 		p2 = multiply(a0, b1, n/2)
+> 		p3 = multiply(a1, b1, n/2)
+> 		
+> 		// Combine the results
+> 		return p3 *B^2k + B^k(p1 + p2) + p0
+> 	
+> }
+>```
 
 
->[!math] Theorem - Recursive Multiplication
-> Let $T(n)$ be the maximal number of primitive operations to multiply two n-digit numbers recursively.
+
+>[!math] Recurrence Relation of Recursive Multiplication
+> We can use a [[Recurrence Relation]] to describe the complexity of this recursive function. Let $T(n)$ be the maximal number of primitive operations to multiply two n-digit numbers recursively.
 >$$
 T(n) \leq \begin{cases} 
 1 & \text{if } n = 1 \\
@@ -24,4 +76,4 @@ T(n) \leq \begin{cases}
 > $$
 
 We can prove this using traditional induction method, or we can use the [[2.3 Master Theorem]]
-
+ 
